dep_int_xli = libx11
dep_ext_xli = dep_jpeg

src = files(
    'bright.c',
    'clip.c',
    'cmuwmrast.c',
    'compress.c',
    'dither.c',
    'faces.c',
    'fbm.c',
    'fill.c',
    'g3.c',
    'gif.c',
    'halftone.c',
    'imagetypes.c',
    'img.c',
    'mac.c',
    'mcidas.c',
    'mc_tables.c',
    'merge.c',
    'misc.c',
    'new.c',
    'options.c',
    'path.c',
    'pbm.c',
    'pcx.c',
    'reduce.c',
    'jpeg.c',
    'rle.c',
    'rlelib.c',
    'root.c',
    'rotate.c',
    'send.c',
    'smooth.c',
    'sunraster.c',
    'value.c',
    'window.c',
    'xbitmap.c',
    'xli.c',
    'xpixmap.c',
    'xwd.c',
    'zio.c',
    'zoom.c',
    'ddxli.c',
    'tga.c',
    'bmp.c',
    'pcd.c',
    'png.c',
)

executable('xli', src,
    dependencies: [dep_int_xli, dep_ext_xli],
    c_args: '-DHAS_MEMCPY',
    install: true,
)

executable('xlito', 'xlito.c',
    dependencies: [dep_int_xli, dep_ext_xli],
    install: true,
)
