subdir('dmx')
subdir('drivers')
subdir('exa')
subdir('fbdevhw')
subdir('vfb')
# subdir('x11')
subdir('xau')
subdir('xaw')
subdir('xcb')
# subdir('xcomposite')
# subdir('xcursor')
subdir('xcvt')
subdir('xephyr')
# subdir('xext')
# subdir('xf86dga')
# subdir('xf86vm')
subdir('xfixes')
# subdir('xfree86')
# subdir('xfs')
# subdir('xft')
# subdir('xi')
# subdir('xinerama')
# subdir('xnest')
# subdir('xpm')
# subdir('xprint')
# subdir('xquartz')
# subdir('xrandr')
# subdir('xres')
subdir('xserver')
# subdir('xss')
# subdir('xt')
# subdir('xtst')
# subdir('xv')