subdir('amdgpu')
# subdir('armsoc') # conflicting with amdgpu
subdir('ati')
subdir('dummy')
subdir('fbdev')
# subdir('intel')   # TODO: finish build
subdir('nouveau')
# subdir('qxl')       # TODO; implement
# subdir('vbox')    # TODO: need "VboxVideo.h" (need dep_vbox?)
subdir('vesa')
# subdir('vmware')    # TODO: need <xa_tracker.h> (mesa?, libxatracker-dev)

# TODO: add ati_drv.so, qxl_drv.so, radeon_drv.so