subdir('amdgpu')
# subdir('armsoc')  # conflicting with amdgpu
subdir('ati')
subdir('dummy')
subdir('fbdev')
# subdir('intel')   # TODO: finish build
subdir('nouveau')
# subdir('qxl')     # TODO: implement
# subdir('vbox')    # TODO: need "VboxVideo.h" (need dep_vbox?)
subdir('vesa')
subdir('vmware')