subdir('amdgpu')
# subdir('armsoc')  # TODO: implement, conflicting with amdgpu
subdir('ati')
subdir('dummy')
subdir('fbdev')
subdir('intel')     # TODO: finish with acceleration support (sna, uxa)
subdir('nouveau')
subdir('qxl')       # TODO: implement spice
# subdir('vbox')    # TODO: need "VboxVideo.h" (need dep_vbox?)
subdir('vesa')
subdir('vmware')